2002-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-at-point (ffap)): Strip text props under XEmacs.
	(ffap-url-regexp): Modify the value to make it match to https urls
	for Emacs 19, 20 and XEmacs.

2002-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-find-coding-system): Alias to ignore if the
	function `find-coding-system' is not available.
	(w3m-make-ccl-coding-system): Check whether the function
	`make-ccl-coding-system' is available instead of checking the
	feature `mule' to determine what function should be aliased to.
	(coding-system-list): Alias to ignore if it is not available.
	(define-ccl-program): Check whether it is available instead of
	checking the feature `mule' to determine if it is aliased to
	`ignore'.
	(w3m-detect-coding-with-priority): Quote
	`w3m-default-coding-system'.

2002-03-24  Nix  <nix@esperi.demon.co.uk>

	* w3m-xmas.el (w3m-detect-coding-with-priority): New macro, handle
	non-MULE XEmacsen.
	(w3m-detect-coding-region): Use it.

2002-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el (TopLevel): Remove useless codes to substitute keys.

	* w3m.el (w3m-w3m-attributes): Ignore trailing whitespaces in
	header lines.

2002-03-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-attributes): Ignore `w3m-document-charset' when
	w3m-m17n.

2002-03-13  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-additional-command-arguments): Fixed problem when
	no-proxy host has port number other than 80.

2002-03-13  Katsumi Yamaoka  <yamaoka@jpl.org>
	Suggested by HAYASHI Chifumi <chifumi@mscom.or.jp>.

	* w3m-form.el (w3m-form-new): Ignore the 2nd arg `action' if it is
	nil.
	(w3m-form-parse-forms): Don't parse the value of `w3m-current-url'
	if it is nil.

2001-11-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mime-w3m.el (TopLevel): Require `w3m' and `mime' only when
	compiling; bind `mime-setup-enable-inline-html' when compiling.
	(mime-w3m-display-inline-image): Changed the default value.