@@ -1785,10 +1785,11 @@ with ^ as `cat -v' does."
   "Fontify anchor tags in this buffer which contains half-dumped data."
   (let ((help (w3m-make-help-echo w3m-href-anchor))
 	(balloon (w3m-make-balloon-help w3m-href-anchor))
-	start end)
+	prenames start end)
     (goto-char (point-min))
     (while (re-search-forward "<_id[ \t\r\f\n]+" nil t)
       (setq start (match-beginning 0))
+      (setq prenames (get-text-property start 'w3m-name-anchor))
       (w3m-parse-attributes (id)
 	(delete-region start (point))
 	(when (re-search-forward "<\\|\n" nil t)
@@ -1796,10 +1797,12 @@ with ^ as `cat -v' does."
 	  (when (= start end)
 	    (setq end (min (1+ end) (point-max))))
 	  (w3m-add-text-properties start end
-				   (list 'w3m-name-anchor id)))))
+				   (list 'w3m-name-anchor
+					 (append (list id) prenames))))))
     (goto-char (point-min))
     (while (re-search-forward "<a[ \t\r\f\n]+" nil t)
       (setq start (match-beginning 0))
+      (setq prenames (get-text-property start 'w3m-name-anchor))
       (w3m-parse-attributes (href name (rel :case-ignore))
 	(when rel
 	  (setq rel (split-string rel))
@@ -1823,7 +1826,8 @@ with ^ as `cat -v' does."
 					   'w3m-href-anchor href
 					   'w3m-cursor-anchor href
 					   'mouse-face 'highlight
-					   'w3m-name-anchor name
+					   'w3m-name-anchor
+					   (append (list name) prenames)
 					   'help-echo help
 					   'balloon-help balloon))))
 	 (name
@@ -1835,7 +1839,8 @@ with ^ as `cat -v' does."
 			       (1+ end))
 			     (point-max))))
 	    (w3m-add-text-properties start end
-				     (list 'w3m-name-anchor name)))))))
+				     (list 'w3m-name-anchor
+					   (append (list name) prenames))))))))
     (when w3m-next-url
       (setq w3m-next-url (w3m-expand-url w3m-next-url)))
     (when w3m-previous-url
@@ -3447,13 +3452,12 @@ this function returns t.  Otherwise, returns nil."
 		   (format " (exit status: %s)" w3m-process-exit-status)
 		 ""))))))
 
-
 (defun w3m-search-name-anchor (name &optional quiet)
   (interactive "sName: ")
   (let ((pos (point-min)))
     (catch 'found
       (while (setq pos (next-single-property-change pos 'w3m-name-anchor))
-	(when (equal name (get-text-property pos 'w3m-name-anchor))
+	(when (member name (get-text-property pos 'w3m-name-anchor))
 	  (goto-char pos)
 	  (throw 'found t))
 	(setq pos (next-single-property-change pos 'w3m-name-anchor)))
@@ -4685,18 +4689,9 @@ the current session.  Otherwise, the new session will start afresh."
     (w3m url t)))
 
 (defun w3m-goto-url-localcgi-movepoint ()
-  (let ((height (/ (window-height) 5))
-	(pos (point-min)))
-    (when (= (point-min) (point))
-      (goto-char
-       (catch 'detect
-	 (while (and (not (eobp))
-		     (setq pos (next-single-property-change
-				pos 'w3m-name-anchor)))
-	   (when (equal (get-text-property pos 'w3m-name-anchor) "current")
-	     (throw 'detect pos)))
-	 (point-min)))
-      (recenter height))))
+  (when (and (= (point-min) (point))
+	     (w3m-search-name-anchor "current" 'quiet))
+    (recenter (/ (window-height) 5))))
 
 ;;;###autoload
 (defun w3m-gohome ()
