@@ -1,3 +1,11 @@
+2002-04-01  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-fontify-anchors): Put a property of
+	`w3m-name-anchor' as a list.
+	(w3m-search-name-anchor): Use `member' when compare a name with
+	`w3m-name-anchor'.
+	(w3m-goto-url-localcgi-movepoint): Use `w3m-search-name-anchor'.
+
 2002-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-url-at-point (ffap)): Strip text props under XEmacs.
